handson driver update

--- a/handson.ipynb
+++ b/handson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [00:38<00:00,  4.82s/it]\n"
+      "100%|██████████| 8/8 [00:38<00:00,  4.87s/it]\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "dict_keys(['pearson', 'spearman', 'kendall', 'distance', 'covariance', 'los_0.01', 'los_0.015', 'los_0.02', 'los_0.025', 'los_0.03', 'los_0.035', 'los_0.04', 'los_0.045000000000000005', 'los_0.05', 'los_0.055', 'los_0.060000000000000005', 'los_0.065', 'los_0.06999999999999999', 'los_0.075', 'los_0.08', 'los_0.08499999999999999', 'los_0.09', 'los_0.095', 'los_0.09999999999999999', 'los_0.105', 'los_0.11', 'los_0.11499999999999999', 'los_0.12', 'los_0.125', 'los_0.13', 'los_0.135', 'los_0.14', 'los_0.14500000000000002', 'los_0.15000000000000002', 'los_0.155', 'los_0.16', 'los_0.165', 'los_0.17', 'los_0.17500000000000002', 'los_0.18000000000000002', 'los_0.18500000000000003', 'los_0.19', 'los_0.195', 'los_0.2'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -126,11 +126,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['pearson', 'spearman', 'kendall', 'distance', 'covariance', 'los_0.01', 'los_0.015', 'los_0.02', 'los_0.025', 'los_0.03', 'los_0.035', 'los_0.04', 'los_0.045000000000000005', 'los_0.05', 'los_0.055', 'los_0.060000000000000005', 'los_0.065', 'los_0.06999999999999999', 'los_0.075', 'los_0.08', 'los_0.08499999999999999', 'los_0.09', 'los_0.095', 'los_0.09999999999999999', 'los_0.105', 'los_0.11', 'los_0.11499999999999999', 'los_0.12', 'los_0.125', 'los_0.13', 'los_0.135', 'los_0.14', 'los_0.14500000000000002', 'los_0.15000000000000002', 'los_0.155', 'los_0.16', 'los_0.165', 'los_0.17', 'los_0.17500000000000002', 'los_0.18000000000000002', 'los_0.18500000000000003', 'los_0.19', 'los_0.195', 'los_0.2'])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modified_matrices.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_cliques = []\n",
+    "metric = 'los_0.17'\n",
     "\n",
     "# for metric, matrix in tqdm(modified_matrices.items(), total=len(modified_matrices)):\n",
     "#     # valid_cliques = check_cliques_struc_v2(matrix, all_neurons, 2, 9)\n",
@@ -140,18 +161,22 @@
     "#     # all_cliques.append(refined_cliques)\n",
     "#     all_cliques.append(louvain_results)\n",
     "\n",
-    "louvain_results = louvain_clustering_best_modularity(modified_matrices[metric], all_neurons, 100)\n",
-    "all_cliques.append(louvain_results)"
+    "# louvain_results = louvain_clustering_best_modularity(modified_matrices[metric], all_neurons, 1000)\n",
+    "# all_cliques.append(louvain_results)\n",
+    "\n",
+    "valid_cliques = check_cliques_struc_v2(modified_matrices[metric], all_neurons, 2, 9)\n",
+    "refined_cliques = refine_cliques(valid_cliques)\n",
+    "all_cliques.append(refined_cliques)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('colorings/louv_los_16_colors.txt', 'w') as f:\n",
-    "    for idx, clique in enumerate(louvain_results):\n",
+    "with open('colorings/cliq_los_17_colors.txt', 'w') as f:\n",
+    "    for idx, clique in enumerate(all_cliques[0]):\n",
     "        for node in clique:\n",
     "            print(f'{node}\\t{idx}', file=f)\n",
     "        \n",
@@ -187,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,17 +296,18 @@
     "    clusters = fcluster(linkage_matrix, n_cluster, criterion='maxclust')\n",
     "\n",
     "    with open(f'colorings/cons_{n_cluster}_colors.txt', 'w') as f:\n",
+    "        max_id = np.max(clusters)\n",
     "        for idx, neuron in enumerate(all_neurons):\n",
     "            print(f'{neuron}\\t{clusters[idx]}', file=f)\n",
     "            \n",
-    "        print(f'AVEL\\t{clusters[idx]+1}', file=f)\n",
-    "        print(f'AVER\\t{clusters[idx]+1}', file=f)\n",
+    "        print(f'AVEL\\t{max_id+1}', file=f)\n",
+    "        print(f'AVER\\t{max_id+1}', file=f)\n",
     "        \n",
-    "        print(f'AVDL\\t{clusters[idx]+2}', file=f)\n",
-    "        print(f'AVDR\\t{clusters[idx]+2}', file=f)\n",
+    "        print(f'AVDL\\t{max_id+2}', file=f)\n",
+    "        print(f'AVDR\\t{max_id+2}', file=f)\n",
     "        \n",
-    "        print(f'AVAL\\t{clusters[idx]+3}', file=f)\n",
-    "        print(f'AVAR\\t{clusters[idx]+3}', file=f)"
+    "        print(f'AVAL\\t{max_id+3}', file=f)\n",
+    "        print(f'AVAR\\t{max_id+3}', file=f)"
    ]
   },
   {
