--- a/handson.ipynb
+++ b/handson.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
-    "from functions import *\n",
-    "import json"
+    "from utils.functions import *\n",
+    "import json\n",
+    "from utils.graph_repair import repair_network"
    ]
   },
   {
@@ -308,15 +309,6 @@
     "        \n",
     "        print(f'AVAL\\t{max_id+3}', file=f)\n",
     "        print(f'AVAR\\t{max_id+3}', file=f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from graph_repair import repair_network"
    ]
   },
   {
