--- a/handson.ipynb
+++ b/handson.ipynb
@@ -47,12 +47,6 @@
     "cmap = get_colormap()\n",
     "\n",
     "worm_dicts = read_input_mat_file(input_file, style = 1, remove_trend=True, smooth_spikes=True, mean_zero=True)\n",
-    "# worm_dicts = read_input_mat_file(input_file, style = 1, remove_trend=False, smooth_spikes=False, mean_zero=False)\n",
-    "\n",
-    "# worm_dicts = read_input_mat_file('pedro_files.mat', style = 2, remove_trend=False, smooth_spikes=False, mean_zero=False)\n",
-    "# annots = [x['annot'] for x in read_input_mat_file(input_file, style = 1, remove_trend=False, smooth_spikes=False, mean_zero=False)]\n",
-    "# for idx in range(len(worm_dicts)):\n",
-    "#     worm_dicts[idx]['annot'] = annots[idx]\n",
     "    \n",
     "averaged_results = calculate_metrics(worm_dicts, use_annotations = True, return_average = True)"
    ]
@@ -1534,6 +1528,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# paper figure positions\n",
     "pos = {\n",
     "    'AVD': (0,0),\n",
     "    'AVE': (1,1),\n",
@@ -1565,6 +1560,7 @@
     "    'DA04': (-2,0.5),\n",
     "}\n",
     "\n",
+    "# worm body positions\n",
     "pos = {\n",
     "    'VA01': (0,0),\n",
     "    'VA02': (1,0),\n",
@@ -1601,6 +1597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# original colorings\n",
     "G_orig.nodes['VA12']['color'] = 0\n",
     "G_orig.nodes['VA03']['color'] = 0\n",
     "\n",
