fixed input to functions

--- a/handson.ipynb
+++ b/handson.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [00:42<00:00,  5.26s/it]\n"
+      "100%|██████████| 8/8 [00:43<00:00,  5.41s/it]\n"
      ]
     }
    ],
@@ -46,14 +46,14 @@
     "input_file = 'PNAS_8worm_dataset_v2.mat'\n",
     "cmap = get_colormap()\n",
     "\n",
-    "worm_dicts = read_input_mat_file(input_file, style = 1, remove_trend=True, smooth_spikes=True, mean_zero=True)\n",
+    "worm_dicts = read_input_mat_file(input_file, remove_trend=True, smooth_spikes=True, mean_zero=True)\n",
     "    \n",
     "averaged_results = calculate_metrics(worm_dicts, use_annotations = True, return_average = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['pearson', 'spearman', 'kendall', 'distance', 'covariance', 'los_0.01', 'los_0.015', 'los_0.02', 'los_0.025', 'los_0.03', 'los_0.035', 'los_0.04', 'los_0.045000000000000005', 'los_0.05', 'los_0.055', 'los_0.060000000000000005', 'los_0.065', 'los_0.06999999999999999', 'los_0.075', 'los_0.08', 'los_0.08499999999999999', 'los_0.09', 'los_0.095', 'los_0.09999999999999999', 'los_0.105', 'los_0.11', 'los_0.11499999999999999', 'los_0.12', 'los_0.125', 'los_0.13', 'los_0.135', 'los_0.14', 'los_0.14500000000000002', 'los_0.15000000000000002', 'los_0.155', 'los_0.16', 'los_0.165', 'los_0.17', 'los_0.17500000000000002', 'los_0.18000000000000002', 'los_0.18500000000000003', 'los_0.19', 'los_0.195', 'los_0.2'])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modified_matrices.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
